--- a/EagleSocial/Eagle.storyboard
+++ b/EagleSocial/Eagle.storyboard
@@ -9,11 +9,6 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Noteworthy.ttc">
-            <string>Noteworthy-Light</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Friends-->
         <scene sceneID="Sga-4V-oDf">
@@ -71,14 +66,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="XNC-1o-hXn">
-                                <rect key="frame" x="0.0" y="75" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
-                            </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G9y-x0-USe">
-                                <rect key="frame" x="0.0" y="131" width="375" height="487"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G9y-x0-USe">
+                                <rect key="frame" x="0.0" y="76" width="375" height="542"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="tableCell" id="Sku-lQ-kNL">
@@ -91,15 +80,22 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Eagle Social" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yhN-kN-1vo">
-                                <rect key="frame" x="0.0" y="20" width="375" height="52"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="40"/>
-                                <color key="textColor" red="1" green="0.75686274509999996" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <searchBar contentMode="redraw" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="XNC-1o-hXn">
+                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="G9y-x0-USe" firstAttribute="bottom" secondItem="mKN-M5-Qjc" secondAttribute="bottom" id="4aH-Dw-daq"/>
+                            <constraint firstItem="XNC-1o-hXn" firstAttribute="leading" secondItem="mKN-M5-Qjc" secondAttribute="leading" id="4vF-hJ-Bsa"/>
+                            <constraint firstItem="XNC-1o-hXn" firstAttribute="top" secondItem="mKN-M5-Qjc" secondAttribute="top" id="7fB-P5-CDi"/>
+                            <constraint firstItem="G9y-x0-USe" firstAttribute="trailing" secondItem="mKN-M5-Qjc" secondAttribute="trailing" id="RNd-3d-kpe"/>
+                            <constraint firstItem="G9y-x0-USe" firstAttribute="leading" secondItem="mKN-M5-Qjc" secondAttribute="leading" id="ihr-zW-pIE"/>
+                            <constraint firstItem="XNC-1o-hXn" firstAttribute="trailing" secondItem="mKN-M5-Qjc" secondAttribute="trailing" id="jn6-78-qYO"/>
+                            <constraint firstItem="G9y-x0-USe" firstAttribute="top" secondItem="XNC-1o-hXn" secondAttribute="bottom" id="kBk-og-qTH"/>
+                            <constraint firstItem="G9y-x0-USe" firstAttribute="top" secondItem="XNC-1o-hXn" secondAttribute="bottom" id="zJR-58-L4e"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="mKN-M5-Qjc"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="home_icon" id="9fV-sF-Sgp"/>
