--- a/EagleSocial/NewsFeedTableViewCell.xib
+++ b/EagleSocial/NewsFeedTableViewCell.xib
@@ -6,38 +6,107 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="150" id="KGk-i7-Jjw" customClass="NewsFeedTableViewCell" customModule="EagleSocial" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+        <tableViewCell contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="141" id="KGk-i7-Jjw" customClass="NewsFeedTableViewCell" customModule="EagleSocial" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="141"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="140.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fQf-Tj-3kw">
-                        <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fQf-Tj-3kw">
+                        <rect key="frame" x="16" y="11" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="60" id="6JH-mJ-jch"/>
+                            <constraint firstAttribute="width" constant="60" id="wwu-hg-Nml"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94y-1O-qeO">
-                        <rect key="frame" x="98" y="11" width="206" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94y-1O-qeO">
+                        <rect key="frame" x="84" y="11" width="183" height="21"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yui-Ao-wch">
-                        <rect key="frame" x="98" y="53" width="206" height="91"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yui-Ao-wch">
+                        <rect key="frame" x="84" y="40" width="206" height="43"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="206" id="eo5-qH-IDO"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kW9-xb-YxO" userLabel="Button View">
+                        <rect key="frame" x="0.0" y="91" width="320" height="39"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g0X-9R-4q6">
+                                <rect key="frame" x="108" y="8" width="104" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="104" id="gYa-E6-vww"/>
+                                    <constraint firstAttribute="height" constant="22" id="mdg-ec-mom"/>
+                                </constraints>
+                                <state key="normal" title=" Comment" image="comment_icon">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H41-N6-nIO">
+                                <rect key="frame" x="236" y="8" width="76" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="MqE-eZ-MMO"/>
+                                    <constraint firstAttribute="width" constant="76" id="pNi-fP-Zlr"/>
+                                </constraints>
+                                <state key="normal" title=" Share" image="share_icon2">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iU1-DB-UNZ">
+                                <rect key="frame" x="0.0" y="8" width="74" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="PQO-Kl-CyN"/>
+                                    <constraint firstAttribute="width" constant="74" id="WkQ-oQ-v0u"/>
+                                </constraints>
+                                <state key="normal" title=" Like" image="like_icon">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="39" id="6kf-ke-Vtg"/>
+                            <constraint firstAttribute="bottom" secondItem="H41-N6-nIO" secondAttribute="bottom" constant="7" id="7aO-au-mXX"/>
+                            <constraint firstItem="iU1-DB-UNZ" firstAttribute="top" secondItem="kW9-xb-YxO" secondAttribute="top" constant="8" id="A46-uT-OA9"/>
+                            <constraint firstAttribute="trailing" secondItem="H41-N6-nIO" secondAttribute="trailing" constant="8" id="IV3-OU-rsD"/>
+                            <constraint firstItem="iU1-DB-UNZ" firstAttribute="leading" secondItem="kW9-xb-YxO" secondAttribute="leading" id="K4P-M2-hmH"/>
+                            <constraint firstItem="g0X-9R-4q6" firstAttribute="centerY" secondItem="kW9-xb-YxO" secondAttribute="centerY" id="XG2-Mp-0Gy"/>
+                            <constraint firstItem="g0X-9R-4q6" firstAttribute="centerX" secondItem="kW9-xb-YxO" secondAttribute="centerX" id="cai-gN-Fbq"/>
+                            <constraint firstAttribute="bottom" secondItem="iU1-DB-UNZ" secondAttribute="bottom" constant="9" id="kkM-Py-SfK"/>
+                            <constraint firstItem="H41-N6-nIO" firstAttribute="top" secondItem="kW9-xb-YxO" secondAttribute="top" constant="8" id="xOu-Cd-dxc"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="Yui-Ao-wch" firstAttribute="leading" secondItem="fQf-Tj-3kw" secondAttribute="trailing" constant="8" id="96n-zD-gTy"/>
+                    <constraint firstItem="Yui-Ao-wch" firstAttribute="top" secondItem="94y-1O-qeO" secondAttribute="bottom" constant="8" id="Ahg-4g-pBb"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="94y-1O-qeO" secondAttribute="trailing" constant="37" id="Hcc-4H-XfG"/>
+                    <constraint firstItem="fQf-Tj-3kw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="NB1-ps-8aw"/>
+                    <constraint firstItem="fQf-Tj-3kw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="NCS-LK-izH"/>
+                    <constraint firstItem="94y-1O-qeO" firstAttribute="leading" secondItem="fQf-Tj-3kw" secondAttribute="trailing" constant="8" id="NP7-u5-0cl"/>
+                    <constraint firstItem="kW9-xb-YxO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="PWg-Yd-CoO"/>
+                    <constraint firstItem="94y-1O-qeO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="R7v-o5-wNO"/>
+                    <constraint firstItem="Yui-Ao-wch" firstAttribute="top" secondItem="94y-1O-qeO" secondAttribute="bottom" constant="8" id="Sry-vq-vxb"/>
+                    <constraint firstItem="94y-1O-qeO" firstAttribute="leading" secondItem="fQf-Tj-3kw" secondAttribute="trailing" constant="8" id="VKC-eq-YR7"/>
+                    <constraint firstAttribute="trailing" secondItem="kW9-xb-YxO" secondAttribute="trailing" id="bBP-vB-UjQ"/>
+                    <constraint firstItem="kW9-xb-YxO" firstAttribute="top" secondItem="Yui-Ao-wch" secondAttribute="bottom" constant="8" id="nu7-kA-ZR7"/>
+                    <constraint firstAttribute="bottom" secondItem="kW9-xb-YxO" secondAttribute="bottom" constant="10.5" id="ox6-cX-ZeA"/>
+                    <constraint firstItem="kW9-xb-YxO" firstAttribute="top" secondItem="Yui-Ao-wch" secondAttribute="bottom" constant="8" id="qGP-6p-9UV"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Yui-Ao-wch" secondAttribute="trailing" constant="14" id="skx-Pc-mZ1"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
@@ -45,7 +114,12 @@
                 <outlet property="profilePicture" destination="fQf-Tj-3kw" id="dfp-ln-AKy"/>
                 <outlet property="textBody" destination="Yui-Ao-wch" id="rWB-hn-bir"/>
             </connections>
-            <point key="canvasLocation" x="107" y="176"/>
+            <point key="canvasLocation" x="107" y="171.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="comment_icon" width="20" height="20"/>
+        <image name="like_icon" width="20" height="20"/>
+        <image name="share_icon2" width="24" height="24"/>
+    </resources>
 </document>
