doing something for jeremiah

--- a/EagleSocial/Eagle.storyboard
+++ b/EagleSocial/Eagle.storyboard
@@ -115,14 +115,14 @@
                     <view key="view" contentMode="scaleToFill" id="ESO-oz-7LD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.84465640779999995" green="0.51457053419999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.60000002384185791" green="0.40000000596046448" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="zkD-oq-auw"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="settings_icon" id="UpU-LS-uXa"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G1z-kD-dyM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1222" y="116"/>
+            <point key="canvasLocation" x="-1223.2" y="115.59220389805098"/>
         </scene>
         <!--Eage Main View Controller-->
         <scene sceneID="Qnv-CK-xDi">
