--- a/EagleSocial/Main.storyboard
+++ b/EagleSocial/Main.storyboard
@@ -129,7 +129,7 @@
                     <view key="view" contentMode="scaleToFill" id="nZx-aa-fvU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="dog-EO-MYa"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Chat" image="chat_icon" id="Mg5-SJ-KXI"/>
